modify topBar a footer

--- a/public/frontend/less/home/index.less
+++ b/public/frontend/less/home/index.less
@@ -1,6 +1,18 @@
 @import "../reset";
 @import "../common";
 
+//@media screen and (min-width: 960px) {
+//  .carouselArea { background-color: green; }
+//}
+//
+//@media screen and (max-width: 960px) and (min-width: 500px) {
+//  .carouselArea { background-color: pink; }
+//}
+//
+//@media screen and (max-width: 500px) {
+//  .carouselArea { background-color: yellow; }
+//}
+
 #home{
   .carouselArea{
     min-width: 1366px;
@@ -51,5 +63,8 @@
         background-color: #585858;
       }
     }
+  }
+  .product_recommend{
+    margin:0 0 60px 0;
   }
 }
