--- a/public/frontend/css/common.css
+++ b/public/frontend/css/common.css
@@ -10,8 +10,8 @@
   width: 36px;
   height: 30px;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 13px;
+  left: 15px;
 }
 .topBar .topBar_menu {
   width: 528px;
@@ -33,6 +33,98 @@
 }
 .topBar .topBar_right {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 15px;
+  right: 130px;
+}
+.topBar .topBar_right .search {
+  display: inline-block;
+  position: relative;
+}
+.topBar .topBar_right .search input {
+  width: 180px;
+  height: 26px;
+  border-radius: 14px;
+  border: solid 1px #5a5a5a;
+}
+.topBar .topBar_right .user_icon {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  margin: 0 0 0 20px;
+  background: url('/images/logo.png') no-repeat;
+  background-size: 16px 16px;
+  position: relative;
+  top: 3px;
+}
+.footer {
+  box-sizing: border-box;
+  min-width: 1366px;
+  height: 480px;
+  padding: 85px 0 0 130px;
+  background-color: #585858;
+}
+.footer .subscribe,
+.footer .about,
+.footer .support,
+.footer .contact {
+  display: inline-block;
+  color: #fff;
+  font-size: 12px;
+  vertical-align: top;
+}
+.footer .subscribe > h4,
+.footer .about > h4,
+.footer .support > h4,
+.footer .contact > h4 {
+  font-size: 16px;
+  margin: 0 0 20px 0;
+}
+.footer .subscribe {
+  width: 33%;
+}
+.footer .subscribe .email_submit > input {
+  width: 277px;
+  height: 40px;
+  text-indent: 10px;
+  border: none;
+  border-radius: 2px;
+  margin: 10px 0;
+}
+.footer .subscribe .email_submit > button {
+  width: 78px;
+  height: 30px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: normal;
+  padding: 0;
+  border: solid 1px #989898;
+  background-color: #585858;
+}
+.footer .about,
+.footer .support {
+  width: 22%;
+}
+.footer .about > ul li,
+.footer .support > ul li {
+  margin: 0 0 20px 0;
+}
+.footer .about > ul li span,
+.footer .support > ul li span {
+  cursor: pointer;
+}
+.footer .about > ul li span:hover,
+.footer .support > ul li span:hover {
+  color: #00a7e1;
+}
+.footer .contact {
+  width: 22%;
+}
+.footer .contact .call,
+.footer .contact .email {
+  margin: 0 0 40px 0;
+}
+.footer .contact .call > h4,
+.footer .contact .email > h4 {
+  font-size: 16px;
+  margin: 0 0 20px 0;
 }
