--- a/public/frontend/less/common.less
+++ b/public/frontend/less/common.less
@@ -10,8 +10,8 @@
     width: 36px;
     height: 30px;
     position:absolute;
-    top:0;
-    left:0;
+    top:13px;
+    left:15px;
   }
   .topBar_menu{
     width:528px;
@@ -42,7 +42,93 @@
   }
   .topBar_right{
     position:absolute;
-    top:0;
-    right:0;
+    top:15px;
+    right:130px;
+    .search{
+      display:inline-block;
+      position:relative;
+      input{
+        width: 180px;
+        height: 26px;
+        border-radius: 14px;
+        border: solid 1px #5a5a5a;
+      }
+    }
+    .user_icon{
+      display:inline-block;
+      width: 16px;
+      height: 16px;
+      margin:0 0 0 20px;
+      background:url('/images/logo.png') no-repeat;
+      background-size:16px 16px;
+      position:relative;
+      top:3px;
+    }
+  }
+}
+.footer{
+  box-sizing: border-box;
+  min-width: 1366px;
+  height: 480px;
+  padding:85px 0 0 130px;
+  background-color: #585858;
+  .subscribe,.about,.support,.contact{
+    display:inline-block;
+    color:#fff;
+    font-size: 12px;
+    vertical-align:top;
+    >h4{
+      font-size: 16px;
+      margin:0 0 20px 0;
+    }
+  }
+  .subscribe{
+    width:33%;
+    .email_submit{
+      >input{
+        width: 277px;
+        height: 40px;
+        text-indent:10px;
+        border:none;
+        border-radius: 2px;
+        margin:10px 0;
+      }
+      >button{
+        width: 78px;
+        height: 30px;
+        color:#fff;
+        font-size: 14px;
+        font-weight:normal;
+        padding:0;
+        border: solid 1px #989898;
+        background-color: #585858;
+      }
+    }
+
+  }
+  .about,.support{
+    width:22%;
+    >ul{
+      li{
+        margin:0 0 20px 0;
+        span{
+          cursor:pointer;
+          &:hover{
+            color:#00a7e1;
+          }
+        }
+
+      }
+    }
+  }
+  .contact{
+    width:22%;
+    .call,.email{
+      margin:0 0 40px 0;
+      >h4{
+        font-size: 16px;
+        margin:0 0 20px 0;
+      }
+    }
   }
 }
