--- a/public/frontend/css/products/index.css
+++ b/public/frontend/css/products/index.css
@@ -221,3 +221,77 @@ table {
   font-size: 16px;
   margin: 0 0 20px 0;
 }
+#products .carouselArea {
+  min-width: 1366px;
+  height: 342px;
+}
+#products .product_list {
+  text-align: center;
+  margin: 0 0 60px 0;
+}
+#products .product_list .category {
+  padding: 0 97px;
+}
+#products .product_list .category .primary {
+  height: 100px;
+  text-align: left;
+  position: relative;
+}
+#products .product_list .category .primary > li {
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  float: left;
+  margin: 0 2px 0 0;
+  background: #ccc;
+}
+#products .product_list .category .primary > li > img {
+  width: 60px;
+  height: 60px;
+}
+#products .product_list .category .primary > li > p {
+  margin: 10px 0 0 0;
+}
+#products .product_list .category .primary > li .secondary {
+  height: 100px;
+  text-align: left;
+  position: absolute;
+  top: 100px;
+  left: 0;
+}
+#products .product_list .category .primary > li .secondary > li {
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  float: left;
+  margin: 0 2px 0 0;
+  background: #ccc;
+}
+#products .product_list .category .primary > li .secondary > li > img {
+  width: 60px;
+  height: 60px;
+}
+#products .product_list .category .primary > li .secondary > li > p {
+  margin: 10px 0 0 0;
+}
+#products .product_list .oneProduct {
+  display: inline-block;
+  width: 271px;
+  height: 331px;
+  margin: 0 12px 10px 0;
+}
+#products .product_list .oneProduct .oneProduct_img {
+  width: 271px;
+  height: 271px;
+}
+#products .product_list .oneProduct .oneProduct_img > img {
+  width: 271px;
+  height: 271px;
+}
+#products .product_list .oneProduct .oneProduct_desc {
+  box-sizing: border-box;
+  width: 271px;
+  height: 60px;
+  padding: 10px;
+  background-color: #585858;
+}
