--- a/public/frontend/less/home/index.less
+++ b/public/frontend/less/home/index.less
@@ -17,30 +17,46 @@
   .carouselArea{
     min-width: 1366px;
     height: 342px;
-    background:blue;
   }
   .product_nav{
-    //width:1120px;
-    //margin:0 auto;
-    text-align:center;
-    .oneProduct{
+    width:1120px;
+    margin:0 auto;
+    .oneProduct_nav{
       display:inline-block;
       width:560px;
       height:280px;
-      .oneProduct_img,.oneProduct_desc{
+      .oneProduct_nav_img,.oneProduct_nav_desc{
+        box-sizing:border-box;
         width: 280px;
         height: 280px;
+        overflow:hidden;
         float:left;
       }
-      .oneProduct_img{
-        background:red;
+      .oneProduct_nav_img{
+        >img{
+          width: 280px;
+          height: 280px;
+          transition:2s;
+          -moz-transition:2s; /* Firefox 4 */
+          -webkit-transition:2s; /* Safari and Chrome */
+          -o-transition:2s; /* Opera */
+        }
+        &:hover{
+          >img{
+            transform: scale(1.3);
+          }
+        }
       }
-      .oneProduct_desc{
-        //text-align:center;
+      .oneProduct_nav_desc{
+        padding:20px;
+        >h4{
+          font-size: 18px;
+          margin: 0 0 10px 0;
+        }
       }
     }
   }
-  .product_sellWell,.product_recommend{
+  .product_sell,.product_recom{
     text-align:center;
     >h3{
       height:35px;
@@ -56,10 +72,16 @@
       .oneProduct_img{
         width:271px;
         height:271px;
+        >img{
+          width:271px;
+          height:271px;
+        }
       }
       .oneProduct_desc{
+        box-sizing:border-box;
         width:271px;
         height:60px;
+        padding:10px;
         background-color: #585858;
       }
     }
