--- a/public/frontend/less/pages/home.less
+++ b/public/frontend/less/pages/home.less
@@ -13,7 +13,7 @@
 //  .carouselArea { background-color: yellow; }
 //}
 
-#home{
+#home_main{
   .carouselArea{
     min-width: 1366px;
     height: 342px;
