--- a/public/frontend/less/pages/product_search.less
+++ b/public/frontend/less/pages/product_search.less
@@ -1,6 +1,30 @@
 @import "../common/reset";
 @import "../common/common";
 
-#products_search{
-
+#product_search_main{
+  .product_list{
+    text-align:center;
+    margin:0 0 60px 0;
+    .oneProduct{
+      display:inline-block;
+      width:271px;
+      height:331px;
+      margin:0 12px 10px 0;
+      .oneProduct_img{
+        width:271px;
+        height:271px;
+        >img{
+          width:271px;
+          height:271px;
+        }
+      }
+      .oneProduct_desc{
+        box-sizing:border-box;
+        width:271px;
+        height:60px;
+        padding:10px;
+        background-color: #585858;
+      }
+    }
+  }
 }
