--- a/public/frontend/css/pages/home.css
+++ b/public/frontend/css/pages/home.css
@@ -94,24 +94,24 @@ table {
 [v-cloak] {
   display: none;
 }
-.topBar {
+#topBar {
   min-width: 1366px;
   height: 56px;
   position: relative;
 }
-.topBar .logo {
+#topBar .logo {
   width: 36px;
   height: 30px;
   position: absolute;
   top: 13px;
   left: 15px;
 }
-.topBar .topBar_menu {
+#topBar .topBar_menu {
   width: 528px;
   height: 56px;
   margin: 0 auto;
 }
-.topBar .topBar_menu li {
+#topBar .topBar_menu li {
   cursor: pointer;
   height: 40px;
   line-height: 56px;
@@ -120,26 +120,26 @@ table {
   float: left;
   position: relative;
 }
-.topBar .topBar_menu li:hover {
+#topBar .topBar_menu li:hover {
   color: #25ba80;
   border-bottom: 1px solid #25ba80;
 }
-.topBar .topBar_right {
+#topBar .topBar_right {
   position: absolute;
   top: 15px;
   right: 130px;
 }
-.topBar .topBar_right .search {
+#topBar .topBar_right .search {
   display: inline-block;
   position: relative;
 }
-.topBar .topBar_right .search input {
+#topBar .topBar_right .search input {
   width: 180px;
   height: 26px;
   border-radius: 14px;
   border: solid 1px #5a5a5a;
 }
-.topBar .topBar_right .user_icon {
+#topBar .topBar_right .user_icon {
   display: inline-block;
   width: 16px;
   height: 16px;
@@ -221,28 +221,28 @@ table {
   font-size: 16px;
   margin: 0 0 20px 0;
 }
-#home .carouselArea {
+#home_main .carouselArea {
   min-width: 1366px;
   height: 342px;
 }
-#home .product_nav {
+#home_main .product_nav {
   width: 1120px;
   margin: 0 auto;
 }
-#home .product_nav .oneProduct_nav {
+#home_main .product_nav .oneProduct_nav {
   display: inline-block;
   width: 560px;
   height: 280px;
 }
-#home .product_nav .oneProduct_nav .oneProduct_nav_img,
-#home .product_nav .oneProduct_nav .oneProduct_nav_desc {
+#home_main .product_nav .oneProduct_nav .oneProduct_nav_img,
+#home_main .product_nav .oneProduct_nav .oneProduct_nav_desc {
   box-sizing: border-box;
   width: 280px;
   height: 280px;
   overflow: hidden;
   float: left;
 }
-#home .product_nav .oneProduct_nav .oneProduct_nav_img > img {
+#home_main .product_nav .oneProduct_nav .oneProduct_nav_img > img {
   width: 280px;
   height: 280px;
   transition: 2s;
@@ -253,52 +253,52 @@ table {
   -o-transition: 2s;
   /* Opera */
 }
-#home .product_nav .oneProduct_nav .oneProduct_nav_img:hover > img {
+#home_main .product_nav .oneProduct_nav .oneProduct_nav_img:hover > img {
   transform: scale(1.3);
 }
-#home .product_nav .oneProduct_nav .oneProduct_nav_desc {
+#home_main .product_nav .oneProduct_nav .oneProduct_nav_desc {
   padding: 20px;
 }
-#home .product_nav .oneProduct_nav .oneProduct_nav_desc > h4 {
+#home_main .product_nav .oneProduct_nav .oneProduct_nav_desc > h4 {
   font-size: 18px;
   margin: 0 0 10px 0;
 }
-#home .product_sell,
-#home .product_recom {
+#home_main .product_sell,
+#home_main .product_recom {
   text-align: center;
 }
-#home .product_sell > h3,
-#home .product_recom > h3 {
+#home_main .product_sell > h3,
+#home_main .product_recom > h3 {
   height: 35px;
   line-height: 35px;
   font-size: 20px;
   color: #585858;
 }
-#home .product_sell .oneProduct,
-#home .product_recom .oneProduct {
+#home_main .product_sell .oneProduct,
+#home_main .product_recom .oneProduct {
   display: inline-block;
   width: 271px;
   height: 331px;
   margin: 0 12px;
 }
-#home .product_sell .oneProduct .oneProduct_img,
-#home .product_recom .oneProduct .oneProduct_img {
+#home_main .product_sell .oneProduct .oneProduct_img,
+#home_main .product_recom .oneProduct .oneProduct_img {
   width: 271px;
   height: 271px;
 }
-#home .product_sell .oneProduct .oneProduct_img > img,
-#home .product_recom .oneProduct .oneProduct_img > img {
+#home_main .product_sell .oneProduct .oneProduct_img > img,
+#home_main .product_recom .oneProduct .oneProduct_img > img {
   width: 271px;
   height: 271px;
 }
-#home .product_sell .oneProduct .oneProduct_desc,
-#home .product_recom .oneProduct .oneProduct_desc {
+#home_main .product_sell .oneProduct .oneProduct_desc,
+#home_main .product_recom .oneProduct .oneProduct_desc {
   box-sizing: border-box;
   width: 271px;
   height: 60px;
   padding: 10px;
   background-color: #585858;
 }
-#home .product_recommend {
+#home_main .product_recommend {
   margin: 0 0 60px 0;
 }
