--- a/public/frontend/css/pages/product_detail.css
+++ b/public/frontend/css/pages/product_detail.css
@@ -94,24 +94,24 @@ table {
 [v-cloak] {
   display: none;
 }
-.topBar {
+#topBar {
   min-width: 1366px;
   height: 56px;
   position: relative;
 }
-.topBar .logo {
+#topBar .logo {
   width: 36px;
   height: 30px;
   position: absolute;
   top: 13px;
   left: 15px;
 }
-.topBar .topBar_menu {
+#topBar .topBar_menu {
   width: 528px;
   height: 56px;
   margin: 0 auto;
 }
-.topBar .topBar_menu li {
+#topBar .topBar_menu li {
   cursor: pointer;
   height: 40px;
   line-height: 56px;
@@ -120,26 +120,26 @@ table {
   float: left;
   position: relative;
 }
-.topBar .topBar_menu li:hover {
+#topBar .topBar_menu li:hover {
   color: #25ba80;
   border-bottom: 1px solid #25ba80;
 }
-.topBar .topBar_right {
+#topBar .topBar_right {
   position: absolute;
   top: 15px;
   right: 130px;
 }
-.topBar .topBar_right .search {
+#topBar .topBar_right .search {
   display: inline-block;
   position: relative;
 }
-.topBar .topBar_right .search input {
+#topBar .topBar_right .search input {
   width: 180px;
   height: 26px;
   border-radius: 14px;
   border: solid 1px #5a5a5a;
 }
-.topBar .topBar_right .user_icon {
+#topBar .topBar_right .user_icon {
   display: inline-block;
   width: 16px;
   height: 16px;
@@ -220,4 +220,121 @@ table {
 .footer .contact .email > h4 {
   font-size: 16px;
   margin: 0 0 20px 0;
+}
+#product_detail_main .productShow .picShow {
+  display: inline-block;
+  width: 50%;
+  text-align: center;
+  vertical-align: top;
+}
+#product_detail_main .productShow .picShow > p {
+  margin: 0 0 10px 0;
+}
+#product_detail_main .productShow .picShow > p img {
+  width: 360px;
+  height: 360px;
+}
+#product_detail_main .productShow .picShow > ul {
+  display: inline-block;
+}
+#product_detail_main .productShow .picShow > ul li {
+  display: inline-block;
+  margin: 0 10px 0 0;
+}
+#product_detail_main .productShow .picShow > ul li img {
+  width: 80px;
+  height: 80px;
+}
+#product_detail_main .productShow .attrShow {
+  display: inline-block;
+  width: 49%;
+  vertical-align: top;
+}
+#product_detail_main .productShow .attrShow > h3 {
+  font-size: 30px;
+  color: #333333;
+  margin: 0 0 18px 0;
+}
+#product_detail_main .productShow .attrShow > p:nth-of-type(1) {
+  font-size: 16px;
+  color: #666666;
+  margin: 0 0 22px 0;
+}
+#product_detail_main .productShow .attrShow > p:nth-of-type(2) {
+  font-size: 36px;
+  color: #25ba80;
+  margin: 0 0 26px 0;
+}
+#product_detail_main .productShow .attrShow > div {
+  margin: 0 0 26px 0;
+}
+#product_detail_main .productShow .attrShow > div > span {
+  display: inline-block;
+  width: 100px;
+}
+#product_detail_main .productShow .attrShow > div > ul > li {
+  display: inline-block;
+  margin: 0 20px 0 0;
+}
+#product_detail_main .productDesc {
+  width: 955px;
+  margin: 0 auto;
+}
+#product_detail_main .productDesc .productDesc_header {
+  height: 38px;
+  line-height: 38px;
+  color: #333333;
+  background-color: #f5f5f5;
+  border: solid 1px #e8e8e8;
+  margin: 0 0 5px 0;
+}
+#product_detail_main .productDesc .productDesc_header li {
+  width: 138px;
+  text-align: center;
+  float: left;
+}
+#product_detail_main .productDesc .productDesc_header li a {
+  text-decoration: none;
+}
+#product_detail_main .productDesc .productDesc_header li.active {
+  border-top: solid 1px #25ba80;
+  border-bottom: solid 1px #fff;
+  background: #fff;
+  position: relative;
+  top: -1px;
+}
+#product_detail_main .productDesc .imageText {
+  height: 200px;
+}
+#product_detail_main .productDesc .comment > h3 {
+  font-size: 36px;
+  color: #333333;
+  text-align: center;
+}
+#product_detail_main .productDesc .comment .comment_list .oneComment {
+  font-size: 16px;
+  margin: 0 0 30px 0;
+}
+#product_detail_main .productDesc .comment .comment_list .oneComment > h4 {
+  font-weight: bold;
+  color: #333333;
+  margin: 0 0 7px 0;
+}
+#product_detail_main .productDesc .comment .comment_list .oneComment > p:nth-of-type(1) {
+  margin: 0 0 7px 0;
+}
+#product_detail_main .productDesc .comment .comment_list .oneComment > p:nth-of-type(1) img {
+  width: 15px;
+  height: 15px;
+}
+#product_detail_main .productDesc .comment .comment_list .oneComment > p:nth-of-type(2) {
+  margin: 0 0 7px 0;
+  color: #999999;
+}
+#product_detail_main .productDesc .comment .comment_list .oneComment > p:nth-of-type(2) span:nth-of-type(1) {
+  margin: 0 25px 0 0;
+}
+#product_detail_main .productDesc .comment .comment_list .oneComment > p:nth-of-type(3) {
+  margin: 0 0 7px 0;
+  color: #333333;
 }
