--- a/public/frontend/less/pages/product_detail.less
+++ b/public/frontend/less/pages/product_detail.less
@@ -1,6 +1,130 @@
 @import "../common/reset";
 @import "../common/common";
 
-#products_detail{
-
+#product_detail_main{
+  .productShow{
+    .picShow{
+      display:inline-block;
+      width:50%;
+      text-align:center;
+      vertical-align: top;
+      >p{
+        margin:0 0 10px 0;
+        img{
+          width:360px;
+          height:360px;
+        }
+      }
+      >ul{
+        display:inline-block;
+        li{
+          display:inline-block;
+          margin:0 10px 0 0;
+          img{
+            width: 80px;
+            height: 80px;
+          }
+        }
+      }
+    }
+    .attrShow{
+      display:inline-block;
+      width:49%;
+      vertical-align: top;
+      >h3{
+        font-size: 30px;
+        color: #333333;
+        margin:0 0 18px 0;
+      }
+      >p:nth-of-type(1){
+        font-size: 16px;
+        color: #666666;
+        margin:0 0 22px 0;
+      }
+      >p:nth-of-type(2){
+        font-size: 36px;
+        color: #25ba80;
+        margin:0 0 26px 0;
+      }
+      >div{
+        margin:0 0 26px 0;
+        >span{
+          display:inline-block;
+          width:100px;
+        }
+        >ul{
+          >li{
+            display:inline-block;
+            margin:0 20px 0 0;
+          }
+        }
+      }
+    }
+  }
+  .productDesc{
+    width:955px;
+    margin:0 auto;
+    .productDesc_header{
+      height: 38px;
+      line-height:38px;
+      color: #333333;
+      background-color: #f5f5f5;
+      border: solid 1px #e8e8e8;
+      margin:0 0 5px 0;
+      li{
+        width:138px;
+        text-align:center;
+        float:left;
+        a{
+          text-decoration: none;
+        }
+      }
+      li.active{
+        border-top: solid 1px #25ba80;
+        border-bottom: solid 1px #fff;
+        background:#fff;
+        position:relative;
+        top:-1px;
+      }
+    }
+    .imageText{
+      height:200px;
+    }
+    .comment{
+      >h3{
+        font-size: 36px;
+        color: #333333;
+        text-align:center;
+      }
+      .comment_list{
+        .oneComment{
+          font-size: 16px;
+          margin:0 0 30px 0;
+          >h4{
+            font-weight: bold;
+            color: #333333;
+            margin:0 0 7px 0;
+          }
+          >p:nth-of-type(1){
+            margin:0 0 7px 0;
+            img{
+              width:15px;
+              height:15px;
+            }
+          }
+          >p:nth-of-type(2){
+            margin:0 0 7px 0;
+            color: #999999;
+            span:nth-of-type(1){
+              margin:0 25px 0 0;
+            }
+          }
+          >p:nth-of-type(3){
+            margin:0 0 7px 0;
+            color: #333333;
+          }
+        }
+      }
+    }
+  }
 }
