--- a/public/frontend/css/pages/login.css
+++ b/public/frontend/css/pages/login.css
@@ -221,3 +221,126 @@ table {
   font-size: 16px;
   margin: 0 0 20px 0;
 }
+.clearfix:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+.clearfix {
+  zoom: 1;
+}
+#login {
+  font-family: Microsoft YaHei;
+  min-width: 1366px;
+}
+#login .container {
+  position: relative;
+  height: 700px;
+  background: url("../../image/Koala.jpg");
+}
+#login .container .main {
+  position: absolute;
+  width: 570px;
+  height: 575px;
+  background-color: #ffffff;
+  right: 121px;
+  top: 74px;
+}
+#login .container .main .welcome {
+  font-size: 48px;
+  padding-left: 63px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+#login .container .main ul {
+  list-style: none;
+  margin: 0 60px;
+  font-size: 18px;
+}
+#login .container .main ul input {
+  box-sizing: border-box;
+  height: 48px;
+}
+#login .container .main ul li {
+  margin-bottom: 29px;
+}
+#login .container .main ul li .form-td {
+  float: left;
+}
+#login .container .main ul li .rememberPassword {
+  float: right;
+}
+#login .container .main ul li .checkbox {
+  width: 18px;
+  height: 18px;
+}
+#login .container .main ul li .loginBtn {
+  box-sizing: border-box;
+  width: 100%;
+  height: 50px;
+  border-radius: 3px;
+  background-color: #25ba80;
+  color: #fff;
+  font-size: 20px;
+  border: 0px solid transparent;
+}
+#login .container .main ul li .hline {
+  width: 45%;
+  border-bottom: 1px solid #9e9f9f;
+  padding: 0;
+  height: 0;
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+}
+#login .container .main ul li .or {
+  width: 10%;
+  text-align: center;
+  display: inline-block;
+  vertical-align: middle;
+}
+#login .container .main ul .li1,
+#login .container .main ul .li2 {
+  border: 1px solid #5a5a5a;
+  border-radius: 3px;
+}
+#login .container .main ul .li1 .line,
+#login .container .main ul .li2 .line {
+  display: inline-block;
+  width: 1px;
+  height: 39px;
+  background-color: #5a5a5a;
+  margin: 5px 0;
+}
+#login .container .main ul .li1 input,
+#login .container .main ul .li2 input {
+  width: 390px;
+  padding-left: 25px;
+  line-height: 1px;
+  font-size: 18px;
+  border: 0 solid transparent;
+}
+#login .container .main ul .li1 .username-icon {
+  height: 40px;
+  width: 40px;
+  margin: 5px;
+}
+#login .container .main ul .li2 .password-icon {
+  height: 40px;
+  width: 40px;
+  margin: 5px;
+}
+#login .container .main ul .li3 span:first-child {
+  border-bottom: 1px solid #5a5a5a;
+}
+#login .container .main ul .li6 {
+  height: 50px;
+  border-radius: 3px;
+  border: solid 1px #25ba80;
+  text-align: center;
+  font-size: 20px;
+  color: #25ba80;
+  line-height: 50px;
+}
