--- a/public/frontend/less/pages/login.less
+++ b/public/frontend/less/pages/login.less
@@ -1,6 +1,134 @@
 @import "../common/reset";
 @import "../common/common";
 
-#login{
 
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+.clearfix {
+  zoom: 1;
+}
+
+
+#login{
+  font-family:Microsoft YaHei;
+  min-width:1366px;
+  .container{
+    position: relative;
+    height: 700px;
+    background:url("../../image/Koala.jpg");
+    .main{
+      position: absolute;
+      width: 570px;
+      height: 575px;
+      background-color: #ffffff;
+      right:121px;
+      top:74px;
+      .welcome{
+        font-size: 48px;
+        padding-left:63px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+      }
+      ul{
+        list-style: none;
+        margin: 0 60px;
+        font-size:18px;
+        input{
+          box-sizing: border-box;
+          height: 48px;
+        }
+        li {
+          margin-bottom:29px;
+          .form-td {
+            float: left;
+          }
+
+          .rememberPassword{
+            float: right;
+          }
+          .checkbox{
+            width: 18px;
+            height:18px;
+          }
+          .loginBtn{
+            box-sizing: border-box;
+            width:100%;
+            height: 50px;
+            border-radius: 3px;
+            background-color: #25ba80;
+            color:#fff;
+            font-size:20px;
+            border:0px solid transparent;
+          }
+          .hline{
+            width: 45%;
+            border-bottom: 1px solid #9e9f9f;
+            padding: 0;
+            height: 0;
+            overflow: hidden;
+            display: inline-block;
+            vertical-align: middle;
+          }
+          .or{
+            width: 10%;
+            text-align: center;
+            display: inline-block;
+            vertical-align: middle;
+          }
+        }
+        .li1,.li2{
+          border: 1px solid #5a5a5a;
+          border-radius: 3px;
+          .line{
+            display: inline-block;
+            width: 1px;
+            height: 39px;
+            background-color: #5a5a5a;
+            margin: 5px 0;
+          }
+          input{
+            width: 390px;
+            padding-left: 25px;
+            line-height: 1px;
+            font-size:18px;
+            border:0 solid transparent;
+          }
+        }
+        .li1{
+          .username-icon {
+            height: 40px;
+            width: 40px;
+            margin: 5px;
+          }
+        }
+        .li2{
+          .password-icon{
+            height: 40px;
+            width: 40px;
+            margin: 5px;
+          }
+        }
+        .li3{
+          span:first-child{
+            border-bottom: 1px solid #5a5a5a;
+          }
+        }
+        .li6{
+          height: 50px;
+          border-radius: 3px;
+          border: solid 1px #25ba80;
+          text-align: center;
+          font-size:20px;
+          color: #25ba80;
+          line-height: 50px;
+        }
+      }
+    }
+  }
 }
