--- a/public/frontend/less/pages/register.less
+++ b/public/frontend/less/pages/register.less
@@ -1,6 +1,83 @@
 @import "../common/reset";
 @import "../common/common";
 
-#register{
 
+#register{
+  .container{
+    font-family:Microsoft YaHei;
+    position: relative;
+    min-width: 1366px;
+    height: 700px;
+    background:url("../../image/Koala.jpg");
+    .main{
+      position: absolute;
+      width: 570px;
+      height: 575px;
+      background-color: #ffffff;
+      right:121px;
+      top:74px;
+      form{
+        margin-left: 64px;
+        width: 447px;
+        .register-header{
+          height: 40px;
+          line-height: 40px;
+          margin-top: 74px;
+          margin-bottom: 51px;
+          .title{
+            font-size: 48px;
+          }
+        }
+        ul{
+            width: 447px;
+            margin:0 auto;
+            list-style: none;
+          li {
+            box-sizing: border-box;
+            height: 49px;
+            border: 1px solid #5a5a5a;
+            margin-bottom: 29px;
+            img {
+              vertical-align: middle;
+              width: 25px;
+              height: 25px;
+              margin: 12px;
+              border: 1px solid red;
+            }
+            .vline {
+              vertical-align: middle;
+              display: inline-block;
+              width: 1px;
+              background-color: #5a5a5a;
+              height: 39px;
+              margin: 5px 0 5px 0;
+            }
+            input {
+              vertical-align: top;
+              box-sizing: border-box;
+              width: 380px;
+              height: 47px;
+              border: 0px solid transparent;
+              border-radius: 3px;
+              font-size: 18px;
+              line-height: 47px;
+              padding-left: 25px;
+            }
+          }
+        }
+        .register-footer {
+          .registerBtn{
+            width: 100%;
+            border-radius: 3px;
+            background-color: #25ba80;
+            height: 50px;
+            color:#ffffff;
+            font-size: 20px;
+            border: 1px solid transparent;
+          }
+        }
+      }
+    }
+
+  };
 }
