--- a/public/cms/less/pages/productMana.less
+++ b/public/cms/less/pages/productMana.less
@@ -1,7 +1,7 @@
 @import "../common/reset";
 @import "../common/common";
 
-#carousel_main{
+#productMana_main{
   min-width:1146px;
   height:600px;
   position:absolute;
