--- a/public/cms/less/common/common.less
+++ b/public/cms/less/common/common.less
@@ -29,3 +29,42 @@
     }
   }
 }
+#sideBar{
+  width: 180px;
+  height: 600px;
+  padding:10px 20px;
+  background-color: #222222;
+  position:absolute;
+  top:56px;
+  left:0;
+  >li{
+    cursor:default;
+    //width: 100px;
+    height: 50px;
+    line-height:50px;
+    color: #95a0aa;
+    text-align:center;
+    position:relative;
+    &:not(:last-child){
+      margin:0 0 10px 0;
+    }
+    span{
+      line-height:80px;
+      font-size:16px;
+    }
+  }
+  >li.active{
+    color:#ceb887;
+    font-weight:500;
+  }
+}
+
+.ali{
+  display:inline-block;
+  width:25px;
+  height:17px;
+  background:url('/images/ali.jpg') no-repeat;
+  position: absolute;
+  top: 31px;
+  left: 0;
+}
